feat: login e logout e swagger completo
